Bug 834270 - Fix PeerConnection error callbacks to return code/reason phrase r=ekr,jsmith